# pykalkan

./: pyproject.toml
.github/workflows/: ci.yml
src/pykalkan/: adapter.py  interface.py
src/pykalkan/C/: lib_handle.py
src/tests/: conftest.py  test_adapter.py
