[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "pykalkan"
version = "1.3.0"
authors = [
    { name = "Shalkarov Temirlan", email = "shalqarov01@gmail.com" },
]
description = "Адаптер(Python) для работы с ЭЦП РК"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "python-dotenv>=1.0.0"]

[project.urls]
"Homepage" = "https://github.com/shalqarov/pykalkan"
"Bug Tracker" = "https://github.com/shalqarov/pykalkan/issues"